<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.toptal.mealsmobileapp.gui.MainActivity">

    <item
        android:id="@+id/action_meals"
        android:orderInCategory="100"
        android:title="@string/action_meals"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_login_logout"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_manage"
        android:orderInCategory="100"
        android:title="@string/action_manage"
        android:visible="false"
        app:showAsAction="never" />

</menu>
